--- a/source/assets/stylesheets/scss/layout/_content.scss
+++ b/source/assets/stylesheets/scss/layout/_content.scss
@@ -111,5 +111,23 @@
       background-color: #fbfafa
     }
   }
+
+  @media screen and (max-width: 767px) {
+    .ui.grid.padded.grid:not(.vertically):not(.horizontally) {
+      > .column:last-child {
+        position: static;
+        width: calc(100% + 20px) !important;
+        margin-left: -0.7143em !important;
+        margin-right: -0.7143em !important;
+        margin-bottom: 2em !important;
+        height: auto;
+        border-left: 0;
+
+        &.reverse-order {
+          order: -1;
+        }
+      }
+    }
+  }
 }
 
